不要な情報の除去など

--- a/pom.xml
+++ b/pom.xml
@@ -4,16 +4,11 @@
 
     <groupId>io.servertap</groupId>
     <artifactId>ServerTap</artifactId>
-    <version>0.0.6-SNAPSHOT</version>
-
-    <scm>
-        <developerConnection>scm:git:ssh://github.com/phybros/servertap.git</developerConnection>
-      <tag>HEAD</tag>
-  </scm>
+    <version>0.1.0-XelticaMC</version>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>16</maven.compiler.source>
+        <maven.compiler.target>16</maven.compiler.target>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -37,9 +32,9 @@
     <dependencies>
         <!-- Minecraft plugin -->
         <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>1.15.2-R0.1-SNAPSHOT</version>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.17.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <!-- HTTP Server -->
@@ -112,7 +107,21 @@
             <version>1.7</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>work.xeltica.craft.core</groupId>
+            <artifactId>XCore</artifactId>
+            <version>2.8.1</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/external/XCore.jar</systemPath>           
+        </dependency>
     </dependencies>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>maven-snapshots</id>
+            <url>https://repository.apache.org/content/repositories/snapshots/</url>
+        </pluginRepository>
+    </pluginRepositories>
 
     <build>
         <plugins>
@@ -130,7 +139,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.1</version>
+                <version>3.3.0-SNAPSHOT</version>
                 <configuration>
                     <relocations>
                       <relocation>
